--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "rust-analyzer.rustfmt.extraArgs": ["\"--config\", \"max_width=120\""]
+  "rust-analyzer.rustfmt.extraArgs": ["\"--config\", \"max_width=120\""],
+  "sarif-viewer.connectToGithubCodeScanning": "off"
 }
