--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "rust-analyzer.rustfmt.extraArgs": ["\"--config\", \"max_width=120\""],
-  "sarif-viewer.connectToGithubCodeScanning": "off"
+  "sarif-viewer.connectToGithubCodeScanning": "off",
+  "cSpell.words": ["Chronal"]
 }
